--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="hero">
             <div class="hero-container">
                 <div class="hero-image left">
-                    <img src="/Saja-Shawawra/images/image1.jpg" alt="Si">
+                    <img src="images/image1.jpg" alt="Si">
                 </div>
                 <div class="hero-content">
                     <h1>The Fragrance of Life</h1>
