--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="hero-image right">
-                    <img src="/Saja-Shawawra/images/image2.jpg" alt="Fragrance Bottle">
+                    <img src="images/image2.jpg" alt="Fragrance Bottle">
                 </div>
             </div>
         </section>
