--- a/about.html
+++ b/about.html
@@ -47,12 +47,12 @@
         <section class="meet-the-team">
             <h3>Meet the Team</h3>
             <div class="team-member">
-                <img src="/Saja-Shawawra/images/image15.jpg" alt="Sama">
+                <img src="images/image15.jpg" alt="Sama">
                 <p><strong>Sama</strong> - CEO</p>
                 <p>With over 15 years in the fragrance industry, Jane leads our company with passion and dedication.</p>
             </div>
             <div class="team-member">
-                <img src="/Saja-Shawawra/images/image16.jpg" alt="Nour">
+                <img src="images/image16.jpg" alt="Nour">
                 <p><strong>Nour</strong> - Head of Marketing</p>
                 <p>John brings fresh and innovative ideas to our marketing team, helping us reach fragrance lovers worldwide.</p>
             </div>
